# Cerebro-Urbano

./: .replit  .replit.  app.py  check_and_kill_process.py  config.py  kill-ollama.bat  lixo_mossoro.csv  main.py  pyproject.toml  replit.nix  start-ollama.bat  start_ollama.py  start_server.ps1
