
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "matplotlib-inline==0.1.7",
    "matplotlib==3.9.3",
    "packages==0.1.1",
    "pandas==2.2.3",
    "scikit-learn",
    "streamlit==1.40.2",
    "matplotlib-venn==1.1.1",
    "matplotlib-scalebar==0.8.1",
    "streamlit-aggrid==1.0.5",
    "streamlit-extras==0.5.0",
    "streamlit-keyup==0.2.4",
    "scikit-learn-extra==0.3.0",
    "scikit-learn-helper>=0.0.10",
    "sagemaker-scikit-learn-extension==2.5.0",
    "pandas-gbq==0.24.0",
    "pandasql==0.7.3",
    "pandas-datareader==0.10.0",
    "pandas-flavor==0.6.0",
]
